feat: create initial style and html tags

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0"
+  },
+  "dependencies": {
+    "swiper": "^8.1.4"
   }
 }
